Fix quick match indicator z-index

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -614,7 +614,6 @@
         font-size: 0.5rem;
         top: 2px;
         right: 2px;
-        z-index: 1000;
     }
 
     .activity.player-waiting:after {
